# ChirPy

./: README.md  conda_env.yml  pyproject.toml
scripts/: CELL.py  CORRELATION_CalculatePowerSpectrum.py  CORRELATION_CalculateVibrationalSpectra.py  CP2K_CheckConservation.py  CP2K_CheckParticleTemp.py  CPMD_AssembleCurrents.py  MODES_Convert.py  MODES_PlotSpectrum.py  MOMENTS_AssembleMolecules.py  MOMENTS_Convert.py  ORCA_ConvertHessian.py  SPECTRUM_Convert_eV2nm.py  SPECTRUM_Convert_rcm2eV.py  SUPERCELL_Create.py  SUPERCELL_PrintInfo.py  SYSTEM_CreateTopologyFile.py  SYSTEM_FindMethylGroups.py  SYSTEM_GetAtomSpread.py  TENSORS_SumRules.py  TRAJECTORY_AlignToAxis.py  TRAJECTORY_AnalyseMotion.py  TRAJECTORY_Convert.py  TRAJECTORY_GetLastStep.py  TRAJECTORY_GetTimeStep.py  TRAJECTORY_InspectFrames.py  TRAJECTORY_MapAtoms.py  TRAJECTORY_MaxwellBoltzmannAnalysis.py  VMD_Arrows.py  VOLUME_Convert.py  VOLUME_Streamlines.py
src/chirpy/: __init__.py  config.py  constants.py  snippets.py  units.py
src/chirpy/classes/: __init__.py  core.py  domain.py  object.py  quantum.py  system.py  trajectory.py  volume.py
src/chirpy/create/: __init__.py  colvar.py  inputfile.py  moments.py  supercell.py
src/chirpy/interface/: __init__.py  cp2k.py  cpmd.py  gaussian.py  molden.py  namd.py  orca.py  pymol.py  tinker.py  vmd.py
src/chirpy/mathematics/: __init__.py  algebra.py  analysis.py
src/chirpy/physics/: __init__.py  classical_electrodynamics.py  kspace.py  modern_theory_of_magnetisation.py  spectroscopy.py  statistical_mechanics.py
src/chirpy/read/: grid.py  (+5 more)
tests/: physics.py
(+19 files in other folders)
