[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chirpy"
description = "A python package for chirality, dynamics, and molecular vibrations."
maintainers = [
  {name = "Sascha Jähnigen", email = "sascha.jaehnigen@fu-berlin.de"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "decorator>=5.2.1",
    "fortranformat>=2.0.3",
    "numpy>=2.3.0",
    "matplotlib>=3.10.0",
    "periodictable>=2.0.2",
    "pycifrw>=5.0.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
classifiers = [
  "Programming Language :: Python"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/sjaehnigen/chirpy"
documentation = "https://github.com/sjaehnigen/chirpy/blob/master/README.md"
repository = "https://github.com/sjaehnigen/chirpy"


[tool.setuptools.dynamic]
version = {attr = "chirpy.__version__"}
